--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "babel-cli": "^6.8.0",
     "express": "^4.13.4",
+    "express-react-views": "^0.10.1",
     "morgan": "^1.7.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-helmet": "^3.1.0",
     "react-router": "^2.4.0"
   },
   "devDependencies": {
