--- a/package.json
+++ b/package.json
@@ -8,11 +8,24 @@
     "serve": "babel-node server/index.js",
     "clean": "rm -rf static/js static/css && mkdir static/js static/css",
     "build": "npm-run-all clean -p build:js build:css",
-    "build:js": "browserify -t babelify src/js/index.js -o static/js/index.js",
+    "build:js": "browserify src/js/index.js -o static/js/index.js",
     "build:css": "node-sass -r src/css/index.scss static/css/index.css",
     "watch": "npm-run-all clean build -p watch:js watch:css serve",
-    "watch:js": "watchify -t babelify src/js/index.js -o static/js/index.js -v -d",
+    "watch:js": "watchify src/js/index.js -o static/js/index.js -v -d",
     "watch:css": "node-sass -w -r src/css/index.scss static/css/index.css"
+  },
+  "browserify": {
+    "transform": [
+      "stringify",
+      "babelify"
+    ]
+  },
+  "stringify": {
+    "appliesTo": {
+      "includeExtensions": [
+        ".md"
+      ]
+    }
   },
   "author": "amagitakayosi",
   "license": "MIT",
@@ -24,7 +37,10 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-helmet": "^3.1.0",
-    "react-router": "^2.4.0"
+    "react-router": "^2.4.0",
+    "remark": "^4.2.2",
+    "remark-html": "^3.0.0",
+    "stringify": "^5.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
