--- a/package.json
+++ b/package.json
@@ -16,16 +16,8 @@
   },
   "browserify": {
     "transform": [
-      "stringify",
       "babelify"
     ]
-  },
-  "stringify": {
-    "appliesTo": {
-      "includeExtensions": [
-        ".md"
-      ]
-    }
   },
   "author": "amagitakayosi",
   "license": "MIT",
@@ -37,10 +29,11 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-helmet": "^3.1.0",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
+    "redux": "^3.5.2",
     "remark": "^4.2.2",
-    "remark-html": "^3.0.0",
-    "stringify": "^5.1.0"
+    "remark-html": "^3.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
