--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.8.0",
+    "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "express-react-views": "^0.10.1",
     "morgan": "^1.7.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
