--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "eslint": "^2.9.0",
     "eslint-plugin-react": "^5.0.1",
     "node-sass": "^3.7.0",
